--- a/app/src/main/res/layout/item_media_grid.xml
+++ b/app/src/main/res/layout/item_media_grid.xml
@@ -15,7 +15,7 @@
         android:id="@+id/selectionOverlay"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#802563EB"
+        android:background="@color/selection_overlay"
         android:visibility="gone" />
 
 </FrameLayout>
